[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/RigidPlayer/RigidPlayer.gd" type="Script" id=1]
[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/RigidPlayer/States/Idle.gd" type="Script" id=3]
[ext_resource path="res://src/RigidPlayer/States/Move.gd" type="Script" id=4]
[ext_resource path="res://src/RigidPlayer/States/Air.gd" type="Script" id=5]
[ext_resource path="res://src/RigidPlayer/States/Run.gd" type="Script" id=6]
[ext_resource path="res://src/RigidPlayer/Rope/Rope.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/RigidPlayer/States/Hooked.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 1 )

[node name="RigidPlayer" type="RigidBody2D"]
collision_mask = 2
mode = 2
gravity_scale = 20.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
current = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("../../RigidPlayer/StateMachine/Move/Idle")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Hooked" type="Node" parent="StateMachine/Move"]
script = ExtResource( 8 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="StateLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GroundCheck" type="Area2D" parent="."]
position = Vector2( 0, 9.5 )
collision_layer = 0
collision_mask = 2

[node name="Collision" type="CollisionShape2D" parent="GroundCheck"]
shape = SubResource( 2 )

[node name="Rope" parent="." instance=ExtResource( 7 )]

[node name="StateLabel" parent="Rope" index="2"]
visible = false

[editable path="Rope"]
